# snf-core

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  patch_snf_core.py  snf.toml  snf.toml.example  snf_core_dump.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: parser_bench.rs
datasets/: README.md  service-names-port-numbers.csv
datasets/ioc/: ip_blocklist.csv
datasets/ja3/: ja3_fingerprints.csv
datasets/ja4/: ja4_fingerprints.csv
docs/: 01_architecture.md  02_determinism.md  03_protocol_support.md  04_event_model.md  05_deployment.md  06_extending.md  SEED_ISSUES.md
examples/: basic_pcap.rs  live_capture.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: packet_fuzzer.rs
src/: main.rs  main.rs.bak
src/analyzers/: dhcp.rs  discovery.rs  dns.rs  doh.rs  dot.rs  enterprise.rs  icmp.rs  mdns.rs  mod.rs  smb.rs  tls.rs
src/capture/: af_xdp.rs  capture_backend.rs  dpdk.rs  interface.rs  mod.rs
src/config/: builder.rs  builder.rs.bak  capture_config.rs  capture_mode.rs  cli.rs  dataset_config.rs  debug_config.rs  device_config.rs  dns_config.rs  engine_config.rs  filter_config.rs  flow_config.rs  intelligence_config.rs  mod.rs  mode.rs  output_config.rs  performance_config.rs  protocol_config.rs  validator.rs
src/core/: config_hasher.rs  event.rs  event_bus.rs  flow_key.rs  mod.rs  packet_context.rs  packet_context_builder.rs  parse_error.rs  session_header.rs
src/dataset/: doh_db.rs  doh_learning.rs  doh_providers.rs  dot_db.rs  dot_learning.rs  dot_providers.rs  ja3_db.rs  ja4_db.rs  mod.rs  ports.rs  tls.rs
src/determinism/: mod.rs
src/flow/: mod.rs  (+4 more)
tests/: integration_test.rs
(+36 files in other folders)
