[package]
name        = "snf-core"
version     = "1.0.2"
edition     = "2024"
description = "Deterministic, offline-first network protocol analysis engine."
license     = "Apache-2.0"
repository  = "https://github.com/padigeltejas/snf-core"
homepage    = "https://shadownf.com"
readme      = "README.md"
keywords    = ["network-forensics", "pcap", "dfir", "passive-ndr", "ics-scada"]
categories  = ["network-programming", "command-line-utilities"]
default-run = "snf-core"
exclude     = [
    "snf.toml",
    "datasets/",
    "docs/",
    "Cargo.lock",
]

[dependencies]
pcap               = "1.3"
etherparse         = "0.14"
x509-parser        = "0.15"
md5                = "0.7"
lazy_static        = "1.4"
dirs               = "5"
chrono             = { version = "0.4", features = ["clock"] }
memmap2            = "0.9"
sha2               = "0.10"
ctrlc              = { version = "3", features = ["termination"] }
crossbeam-channel  = "0.5"
libc               = "0.2"

[features]
default = []
dpdk    = []

[[example]]
name = "basic_pcap"
path = "examples/basic_pcap.rs"

[[example]]
name = "live_capture"
path = "examples/live_capture.rs"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0.149"
tempfile = "3.27.0"

[profile.bench]
opt-level = 3

[[bench]]
name = "parser_bench"
harness = false
