[package]
name = "snf-core-fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
snf-core = { path = ".." }
etherparse = "0.14"

[[bin]]
name = "packet_fuzzer"
path = "fuzz_targets/packet_fuzzer.rs"
test = false
doc = false